speeches - read zipped csv file directly

--- a/Text Analytics/3 - Speeches.ipynb
+++ b/Text Analytics/3 - Speeches.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,13 +42,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "pd.options.display.max_colwidth = 150\n",
     "\n",
-    "df = pd.read_csv(data_file_prefix + 'un-general-debates-blueprint.csv')"
+    "df = pd.read_csv(data_file_prefix + 'un-general-debates-blueprint.zip')"
    ]
   },
   {
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,7 @@
        "max      70.000000  2015.000000  72041.000000"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,13 +197,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e7f1c06ce60a409eae3989dbf2c037d2",
+       "model_id": "8134e6c767ca49e0b383734672d4eb28",
        "version_major": 2,
        "version_minor": 0
       },
@@ -217,7 +217,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "58a26fc53b284b0bb421c916828de277",
+       "model_id": "50f4803634914e0aa54013d9be24a413",
        "version_major": 2,
        "version_minor": 0
       },
@@ -245,7 +245,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9ee53065d1854df5a6047f711d4fe26e",
+       "model_id": "83275f8a78e7420783ba811a537923ee",
        "version_major": 2,
        "version_minor": 0
       },
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +298,7 @@
        "      <th>country</th>\n",
        "      <td>7507</td>\n",
        "      <td>199</td>\n",
-       "      <td>GTM</td>\n",
+       "      <td>IRQ</td>\n",
        "      <td>46</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -314,11 +314,11 @@
       ],
       "text/plain": [
        "        count unique            top freq\n",
-       "country  7507    199            GTM   46\n",
+       "country  7507    199            IRQ   46\n",
        "speaker  7480   5428  Seyoum Mesfin   12"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +353,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -382,12 +382,12 @@
        "George W. Bush        4\n",
        "Mr. George W. Bush    2\n",
        "George Bush           1\n",
-       "Mr. George W Bush     1\n",
        "Bush                  1\n",
+       "Mr. George W Bush     1\n",
        "Name: speaker, dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +414,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -455,7 +455,7 @@
        "<AxesSubplot:ylabel='Frequency'>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -558,7 +558,7 @@
        "<AxesSubplot:title={'center':'Number of Countries'}, xlabel='year'>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -590,7 +590,7 @@
        "<AxesSubplot:title={'center':'Avg. Speech Length'}, xlabel='year'>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -621,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -650,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -688,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -704,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -729,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -749,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -799,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -830,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -861,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -885,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -914,7 +914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -933,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -950,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -962,7 +962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -973,7 +973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -997,7 +997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1024,7 +1024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1054,14 +1054,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'ourselves', 'sometimes', 'into', 'twenty', 'although', 'because', 'together', 'almost', 'were', 'same', 'to', 'nor', 'thence', 'empty', 'me', 'back', 'do', '‘ll', 'your', 'what', 'does', 'but', 'serious', 'hereby', 'put', 'by', 'next', 'about', 'this', 'themselves', 'did', 'otherwise', 'while', 'myself', 'via', 'beyond', 'there', 'whenever', 'off', 'whereafter', 'used', 'a', 'will', 'each', 'anyone', 'herself', 'former', 'as', 'below', 'latter', 'i', 'only', 'another', 'above', 'in', 'whoever', 'ca', 'wherever', 'whither', 'who', 'among', 'still', 'mostly', 'being', 'nine', 'really', 'over', 'five', 'yourselves', 'all', 'an', 'more', 'anywhere', 'top', 'few', 'often', 'through', 'hence', 'n‘t', '’ve', 'could', 'hundred', 'for', 'so', 'anyhow', 'up', 'out', 'somehow', 'thus', 'much', 'be', 'call', 'was', 'alone', 'seeming', 'rather', 'am', 'forty', 'both', 'become', 'under', 'one', 'nobody', \"'ve\", 'no', 'thereby', 'two', 'him', 'itself', 'nevertheless', 'anyway', 'formerly', 'least', 'has', 'herein', 'along', 'yours', 'against', 'whence', 'very', 'else', '’re', 'either', 'down', 'eleven', 'name', 'always', 'everywhere', 'she', 'us', 'becomes', 'front', 'many', 'my', 'we', 'take', 'amongst', 'now', 'get', 'then', 'further', 'hereafter', '’d', 'whole', 'also', 'that', 'beside', 'namely', 'our', 'became', 'upon', 'perhaps', 'move', \"'re\", 'something', 'these', 'them', 'after', 'must', 'full', 'when', 'last', \"'s\", 'his', 'hers', 'of', '’s', 'own', 'across', \"'m\", 'several', 'too', 'without', 'are', 'third', 'quite', 'on', 'well', 'using', 'those', 'and', 'where', 'doing', 'somewhere', 'go', 'afterwards', 'seem', 'whatever', \"'d\", 'none', 'except', 'noone', 'twelve', 'its', 'it', 'please', 'himself', 'various', 'enough', 'at', 'fifteen', 'seemed', 'such', 'toward', 'seems', 'already', 'beforehand', 'from', 'everything', 'since', 'mine', 'should', 'therein', 'her', 'thereupon', 'here', 'regarding', 'been', '‘re', 'between', 'though', 'six', 'made', 'behind', 'any', '‘s', 'others', 'done', 'however', 'less', 'how', 'every', 'fifty', 'wherein', 'becoming', 'show', 'moreover', 'n’t', 'if', 'which', 'see', 'cannot', 'hereupon', 'ten', 'amount', 'other', 'would', 'until', 'first', 'might', 'part', 'yet', 'whether', 'not', 'sixty', 'bottom', 'their', '‘ve', 'whereupon', 'whereby', 'four', 'unless', 'sometime', 'or', 'due', 'throughout', 'even', 'keep', 'can', 're', 'why', 'never', 'may', 'make', 'meanwhile', 'indeed', 'had', 'within', 'during', 'onto', 'most', 'the', 'ever', 'latterly', 'besides', 'with', 'nothing', 'everyone', \"n't\", 'whom', 'they', '’m', 'thru', 'you', 'have', 'side', 'whereas', 'again', 'is', 'elsewhere', 'neither', 'around', 'someone', 'say', 'give', 'whose', \"'ll\", 'just', '‘m', 'eight', 'some', 'than', 'anything', 'ours', 'he', '‘d', 'yourself', 'nowhere', 'thereafter', 'once', 'three', 'towards', 'therefore', 'before', 'per', '’ll'}\n"
+      "{'go', 'on', 'whence', 'some', 'except', 'whenever', 'less', 'it', 'a', 'serious', 'eight', 'whereupon', 'against', 'an', 'all', 'nowhere', 'back', 'should', 'will', 'next', 'upon', 'ever', 'for', 'fifty', 'how', 'quite', 'ten', 'otherwise', 'together', 'before', 'wherein', 'indeed', 'really', \"'re\", 'among', 'below', 'done', 'twenty', 'latterly', 'whoever', 're', 'so', 'regarding', 'within', 'nobody', 'this', 'were', 'thereupon', 'can', 'empty', 'hence', 'yours', 'whatever', 'hereby', 'someone', 'wherever', 'more', 'besides', 'somewhere', 'anywhere', 'almost', 'with', 'just', 'behind', 'under', 'anyhow', 'thence', 'of', 'other', 'several', 'yourselves', 'our', 'itself', 'well', 'beyond', 'who', 'enough', 'any', 'somehow', \"'ll\", 'anything', 'alone', 'too', 'see', 'whereby', 'rather', 'throughout', 'very', '’s', 'those', 'was', 'yourself', 'move', 'become', 'do', 'namely', 'nor', 'made', 'still', 'one', 'call', 'where', 'although', 'your', 'make', \"'s\", 'mostly', 'six', 'side', 'none', 'thereafter', 'towards', 'which', \"n't\", 'might', '’d', 'if', 'show', 'up', 'being', 'nine', 'per', 'two', 'neither', 'thus', 'ours', 'over', 'its', 'third', 'herein', 'such', 'may', 'yet', \"'d\", 'put', 'please', 'amount', 'us', 'nothing', 'along', 'various', 'cannot', 'everyone', 'seemed', 'him', 'anyway', 'few', 'am', 'have', 'either', 'no', 'full', 'give', 'why', 'meanwhile', 'from', 'therein', 'five', 'been', 'already', 'is', 'part', 'them', 'because', 'only', 'same', 'doing', 'front', 'both', 'bottom', 'say', 'to', 'former', 'however', 'during', 'at', 'though', 'what', '‘s', 'whole', 'first', 'fifteen', 'into', 'their', 'and', 'four', 'sometimes', 'themselves', 'me', 'many', 'sometime', 'becoming', 'are', 'now', 'ca', \"'ve\", 'hers', 'others', '’m', 'anyone', 'seem', 'whose', 'much', 'whom', 'beside', 'not', 'you', 'every', 'her', 'n‘t', 'used', 'top', 'forty', 'became', 'elsewhere', 'thru', 'hereupon', 'seeming', 'hundred', 'due', 'once', 'after', 'she', 'since', 'the', 'his', 'across', 'my', 'toward', 'than', 'hereafter', 'does', 'has', 'while', 'about', 'own', 'something', 'moreover', 'afterwards', \"'m\", 'himself', 'eleven', 'whether', 'whither', 'most', 'never', '‘ve', 'beforehand', 'another', '‘d', 'off', 'perhaps', '’ve', 'that', 'mine', 'everywhere', 'did', 'these', 'or', 'ourselves', 'always', 'noone', 'everything', 'latter', '‘m', 'also', 'therefore', 'name', 'between', 'had', 'thereby', 'twelve', 'through', 'unless', 'get', 'again', 'nevertheless', 'else', 'could', 'there', 'but', 'often', 'using', 'whereas', '’re', 'formerly', '‘re', 'herself', 'amongst', 'myself', 'around', 'seems', 'when', 'three', 'becomes', 'n’t', 'via', 'even', 'further', 'sixty', 'i', 'here', 'take', 'onto', 'by', 'down', 'above', 'in', '‘ll', 'would', 'we', 'must', 'least', 'each', 'last', 'whereafter', 'out', 'be', 'keep', 'without', 'as', 'they', 'he', 'until', '’ll', 'then'}\n"
      ]
     }
    ],
@@ -1080,7 +1080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1102,7 +1102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1146,7 +1146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
