--- a/Text Analytics/3 - Speeches.ipynb
+++ b/Text Analytics/3 - Speeches.ipynb
@@ -33,7 +33,7 @@
     "# If so, use an https URL to access the data.  Otherwise, load via the file path\n",
     "try:\n",
     "  import google.colab\n",
-    "  data_file_prefix = \"https://raw.githubusercontent.com/slankas/DataScienceNotebooks/master/DataCleaning/\"\n",
+    "  data_file_prefix = \"https://raw.githubusercontent.com/slankas/DataScienceNotebooks/master/Text%20Analytics/\"\n",
     "  import plotly.io as pio\n",
     "  pio.renderers.default = 'colab'\n",
     "except:\n",
