--- a/IntroductionToPython/01-Introduction.ipynb
+++ b/IntroductionToPython/01-Introduction.ipynb
@@ -13,7 +13,7 @@
     "\n",
     "The Jupyter environment follows a very familar [user interface](https://en.wikipedia.org/wiki/WIMP_(computing)) pattern - the main difference is the ability to execute code within the different cells.  As you scroll through this notebook, you'll see that is composed of a particular sequence of cells.  Each of those cells, can either be code or [markdown](https://en.wikipedia.org/wiki/Markdown).  You will need to execute all of the code cells - primarily in order, but you can modify and repeat running cells.  With the markdown cells, we will provide content (e.g., this cell) or provide instructions or exercises to perform. \n",
     "\n",
-    "Additionally, a particuler cell can be in one of two modes:\n",
+    "A particular cell can be in one of two modes:\n",
     "1. Command - will have a blue border around the active/current cell.\n",
     "2. Edit - in this mode, you can change the content of the cells.  A green border is present.\n",
     "\n",
@@ -42,7 +42,7 @@
    "metadata": {},
    "source": [
     "## Sample Program: The Wayback Machine\n",
-    "This notebook demonstrates a couple of python scripts that can retrieve results from a web service and then show you the results. As this is also one of the first Python programs you might have seen, we'll provide a detail explaination of each step.\n"
+    "This notebook demonstrates a couple of python scripts that can retrieve results from web services and then show you the results. As this is also one of the first Python programs you might have seen, we'll provide a detail explaination of each step.\n"
    ]
   },
   {
@@ -72,7 +72,7 @@
     "Requirement already satisfied: google in ......./site-packages (3.0.0)\n",
     "```\n",
     "\n",
-    "The first line let's the script(program) utilize the 'sys' module, which provides access to various parameters and settings used by the python interpreter.  The corresponding Python documentation is available at <https://docs.python.org/3/library/sys.html> - do not worry if the contents of that page don't make much sense - we will explain and usages of APIs as we go through this course.\n",
+    "The first line allows the script(program) utilize the 'sys' module, which provides access to various parameters and settings used by the python interpreter.  The corresponding Python documentation is available at <https://docs.python.org/3/library/sys.html> - do not worry if the contents of that page don't make much sense - we will explain the usages of various application program interaces (APIs) as we go through this course.\n",
     "\n",
     "The second line uses the current Python interpreter for the specific environment in which this Jupyter notebook executes.  With that, the line then uses the \"pip\" module to install the latest version of the google API.  (\"pip\" can also be executed as a command-line program.)  Any depencences required by the google API will also be installed - this is why you may see output related to beautifulsoup4 and soupsieve.\n",
     "\n",
@@ -92,20 +92,18 @@
     "    \n",
     "print(\"Let's find an old website.\")\n",
     "site = input(\"Type a website URL: \")\n",
-    "era = input(\"Type a year, month, and day, like 20150613: \")\n",
+    "era = input(\"Type a year, month, and day, like 20140410: \")\n",
     "url = \"http://archive.org/wayback/available?url=%s&timestamp=%s\" % (site, era)\n",
     "response = urlopen(url)\n",
     "contents = response.read()\n",
-    "text = contents.decode(\"utf-8\")\n",
-    "data = json.loads(text)\n",
+    "data = json.loads(contents)\n",
     "try:\n",
-    "    old_site = data[\"archived_snapshots\"][\"closest\"][\"url\"]\n",
-    "    print(\"Found this copy: \", old_site)\n",
+    "    old_site_url = data[\"archived_snapshots\"][\"closest\"][\"url\"]\n",
+    "    print(\"Found this copy: \", old_site_url)\n",
     "    print(\"It should appear in your browser now.\")\n",
-    "    webbrowser.open(old_site)\n",
+    "    webbrowser.open(old_site_url)\n",
     "except:\n",
-    "    print(\"Sorry, no luck finding\", site)\n",
-    "    \n"
+    "    print(\"Sorry, no luck accessing\", site)"
    ]
   },
   {
@@ -121,27 +119,26 @@
    "id": "dc8edee7",
    "metadata": {},
    "source": [
-    "While you may be new to Programming, hopefully you could see a little bit how the previous code block worked.\n",
+    "While you may be new to programming, hopefully you could see a little bit how the previous code block worked. In command mode for the previous cell, type <kbd class=\"key-l\">l</kbd></span> to see line numbers.\n",
     "\n",
-    "* lines 1 and 2 let the program use the webbrowser and json libraries.  The webbrowser library lets us open a new browser window with a given URL (line 17).  [JSON](https://www.json.org/) has become one of the standards for exchanging data through internet-based APIs. We'll cover this in more detail as the course progresses. \n",
+    "* lines 1 and 2 let the program use the webbrowser and json libraries.  The webbrowser library lets us open a new browser window with a given URL (line 17).  [JSON](https://www.json.org/) has become one of the standards for exchanging data through internet-based APIs. We'll cover JSON in more detail as the course progresses. \n",
     "* line 3 allows us to use the the `urlopen()` method from the `urllib.request` module.\n",
-    "* line 5 prints a message to the console telling the user what the programm will do\n",
+    "* line 5 prints a message to the console telling the user what the program will do\n",
     "* line 6 allows the user to type in the URL for a particular website.  For this example, I used `http://irishwildcat.com`, an old blog that's no longer available on the internet.\n",
     "* line 7 gets a date in a particular format starting with the year, month, and then day.  This representation is based off an international standard - [ISO-8601](https://en.wikipedia.org/wiki/ISO_8601)\n",
     "* line 8 creates a variable called `url` to point to a location on Wayback Machine at https://archive.org/\n",
     "* line 9 opens a connection to that url on archive.org and places the result into the variable `response`\n",
     "* line 10 then reads the text output from that connection, placing the output into the variable `contents`\n",
-    "* line 11 then translates that result into a particular string encoding and assigns the result to the variable `text` \n",
-    "* line 12 converts the contents of the text variable (which contains a JSON object) to a Python dictionary.  A dictionary stores data in key-value pairs - we'll give this in much greater detail a few notebooks from now.\n",
-    "* In lines 13-19, we execute a block of code in a special region.  If any Python errors occur, they will be caught the user will be shown the message from line 19.\n",
-    "* line 14 grabs a specific URL from the results of the Wayback Machine.\n",
-    "* line 15 prints that URL\n",
-    "* line 16 tells the user that we will be opening that URL in a new browswer window.\n",
-    "* line 17 then opens a browswer window with that URL.\n",
+    "* line 11 converts the contents of the text variable (which contains a JSON object) to a Python dictionary.  A dictionary stores data in key-value pairs - we'll give this in much greater detail a few notebooks from now.\n",
+    "* In lines 12-18, we execute a block of code in a special region.  If any Python errors occur, the error will be caught and  the user will be shown the message from line 19.\n",
+    "* line 13 grabs a specific URL from the results of the Wayback Machine.\n",
+    "* line 14 prints that URL\n",
+    "* line 15 tells the user that we will be opening that URL in a new browswer window.\n",
+    "* line 16 then opens a browswer window with that URL. NOTE: this will not work in Google Colaboratory.\n",
     "\n",
     "Note: if you want to see the values of some of these intermediate values, you can edit the above source code and insert a line such as the following just after that variables is assigned:\n",
     "```\n",
-    "print(text)\n",
+    "print(content)\n",
     "```"
    ]
   },
@@ -285,11 +282,11 @@
    "metadata": {},
    "source": [
     "## Sample Program: Traveling Salesman and Solvability\n",
-    "The lecture slides presented computer science as being concerned with asking if a particular problem can be solved and if it is solvaable, how expensive is it to solve.\n",
+    "The lecture slides presented computer science as being concerned with asking if a particular problem can be solved and if it is solvable, how expensive is it to solve.\n",
     "\n",
     "One of the most well-studied problems in computer science is the [travelling salesperson problem](https://en.wikipedia.org/wiki/Travelling_salesman_problem).  Suppose a salesperson has to visit $n$  cities and return back to that starting point.  What is the shortest route that visits each city exactly once?\n",
     "\n",
-    "The brute-force method would be to try all possible permutations of the city ordering. Suppose we had 3 cities, the following possibilities exits:\n",
+    "The brute-force method would be to try all possible [permutations](https://en.wikipedia.org/wiki/Permutation) of the city ordering. Suppose we had 3 cities, the following possibilities exits:\n",
     "- City 1, City 2, City 3\n",
     "- City 1, City 3, City 2\n",
     "- City 2, City 1, City 3\n",
@@ -326,10 +323,10 @@
    "id": "16c923ab",
    "metadata": {},
    "source": [
-    "Try running the above code block for different values for the number of cities.  As you can see if you use a small value, you'll end up with zero as the code uses integral division `//`.  For small values, take out `// num_sec_in_day` to just see the number of seconds or even reduce the assumption of 1 billion tries per second. How could you convert the result to the number of years?\n",
+    "Try running the above code block for different values for the number of cities.  As you can see if you use a small value, you'll end up with zero as the code uses integral division `//`.  For small values, take out `// num_sec_in_day` to just see the number of seconds or alter the assumption of 1 billion tries per second. How could you convert the result to the number of years?\n",
     "\n",
-    "This problem have direct applicability to real-life:\n",
-    "- Create routes on maps\n",
+    "This problem has direct applicability to real-life:\n",
+    "- Creating routes on maps\n",
     "- Delivery schedules for companies such as Amazon, FedEx, and UPS."
    ]
   },
