--- a/IntroductionToPython/02-Types,Values,Variables,Names.ipynb
+++ b/IntroductionToPython/02-Types,Values,Variables,Names.ipynb
@@ -81,14 +81,24 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d23b1222",
+   "metadata": {},
+   "source": [
+    "Within Python, values can either be expressed as a literal value or as a variable.  The preceding table shows literal values within the example column."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6bd65c5c-6ea1-4f7c-9334-ef6a5c136b60",
    "metadata": {},
    "source": [
-    "Within Python, values can either be expressed as a literal value or as a variable.  The preceding table shows literal values within the example column.\n",
+    "## Variables\n",
     "\n",
-    "Variables are a named piece of the computer's memory that can hold a particular object.\n",
+    "TODO:  NEED TO BE MORE PRECISE IN OUR LANGUAGE HERE...  START DISCUSSIING REFERENCES\n",
     "\n",
-    "In this code block, we define three variables:"
+    "Variables are a named piece of the computer's memory that can hold a particular object.  Variables are places to store information/data.\n",
+    "\n",
+    "In this code block, we declare three variables:"
    ]
   },
   {
