--- a/IntroductionToPython/03-Boolean,Numbers,Operations.ipynb
+++ b/IntroductionToPython/03-Boolean,Numbers,Operations.ipynb
@@ -7,7 +7,9 @@
    "source": [
     "# Booleans, Numbers and Operations\n",
     "\n",
-    "This notebook introduces three of the simpler data types within Python: Booleans, ints, and floats. As ints and floats are presented, the notebook shows various operations to combine different variables and literals in order to form an expression.  \n",
+    "This notebook introduces three of the simpler data types within Python: Booleans, ints, and floats. As ints and floats are presented, the notebook shows various operations to combine different variables and literals in order to form an expression.\n",
+    "\n",
+    "Expressions are simply any combination of one or more literals(constants), variables, functions, and operators. \n",
     "\n",
     "Throughout this notebook, practice changing the values and re-running the cells to see what happens."
    ]
