--- a/IntroductionToPython/06-Functions.ipynb
+++ b/IntroductionToPython/06-Functions.ipynb
@@ -538,6 +538,25 @@
   },
   {
    "cell_type": "markdown",
+   "id": "62931265",
+   "metadata": {},
+   "source": [
+    "## Case Study: Revisiting the System Investment Calculator\n",
+    "- push into function\n",
+    "- separation\n",
+    "- single responsibility\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "27f3374c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "7670c15d",
    "metadata": {},
    "source": [
